--- a/Website/templates/advanced.html
+++ b/Website/templates/advanced.html
@@ -2,34 +2,39 @@
 {% block title %} Advanced {% endblock %} 
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='advanced.css') }}">
+    {% set css_url = url_for('static', filename='advanced.css') %}
+    <link rel="stylesheet" href="{{ css_url }}">
 {% endblock %}
 
-{% block content%} 
+{% block content %} 
     <h2>Number of Movies by Production Country</h2> 
     <div class="chart-wrapper">
         <div id="chart">{{chart1|safe}}</div>
     </div>
 
-    <h2>Spider Chart 1</h2>
-    <div class="search-container">
-        <input type="text" id="search-movie1" placeholder="Search for Movie 1">
-        <input type="number" id="width1" placeholder="Width" value="650">
-        <input type="number" id="height1" placeholder="Height" value="470">
-        <button id="update-chart1">Update Chart 1</button>
-    </div>
-    <div class="chart-wrapper">
-        <div id="chart2">{{chart2|safe}}</div>
+    <h2>Real Time Movie Data Comparison</h2>
+    <div class="chart-grid">
+        <div class="chart-wrapper">
+            <div id="chart2">{{chart2|safe}}</div>
+        </div>
     </div>
 
-    <h2>Spider Chart 2</h2>
-    <div class="search-container">
-        <input type="text" id="search-movie2" placeholder="Search for Movie 2">
-        <input type="number" id="width2" placeholder="Width" value="650">
-        <input type="number" id="height2" placeholder="Height" value="470">
-        <button id="update-chart2">Update Chart 2</button>
+    <!-- Add more space between charts and search containers -->
+    <div class="spacer"></div>
+
+    <!-- Search containers at the bottom of the page -->
+    <div class="bottom-search-container">
+        <form id="search-form" action="{{ url_for('views.advanced') }}" method="GET">
+            <div class="search-container">
+                <input type="text" class="search-bar" name="title1" placeholder="Search for Spider Chart 1">
+                <input type="text" class="search-bar" name="title2" placeholder="Search for Spider Chart 2">
+            </div><br><br><br>
+            <button type="submit">Compare</button>
+            <div id="error-message" style="color: red; display: none;">Both fields must be filled in to search.</div>
+        </form>
     </div>
-    <div class="chart-wrapper">
-        <div id="chart3">{{chart3|safe}}</div>
-    </div>
+{% endblock %}
+
+{% block extra_js %}
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 {% endblock %}
