--- a/Website/templates/basic.html
+++ b/Website/templates/basic.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %} 
 {% block title %} Basic {% endblock %} 
+
+{% block extra_css %}
+    {% set css_url = url_for('static', filename='basic.css') %}
+    <link rel="stylesheet" href="{{ css_url }}">
+{% endblock %}
+
 {% block content %} 
     <div id="side-panel" class="side-panel">
         <!-- Side panel content here -->
