--- a/Website/templates/searched_movieDashboard.html
+++ b/Website/templates/searched_movieDashboard.html
@@ -1,47 +1,47 @@
 {% extends "base.html" %}
-{% block title %} Single Movie Dashboard {% endblock %}
+{% block title %} Searched Movie Dashboard {% endblock %}
 {% block content %}
 <div id="side-panel" class="side-panel">
-    <!-- Side panel content here -->
-</div>
-<h1 class="page-title">Single Movie Dashboard</h1>
-<div class="chart-grid">
-    <div class="chart1">
-        <div class="chart-container">
-            <h2>Top 10 Most Popular Movies (By Vote Count)</h2>
-            {{ chart1|safe }}
+        <!-- Side panel content here -->
+    </div>
+    <h1 class="page-title">Explore the Essentials of Cinema Analytics</h1>
+    <div class="chart-grid">
+        <div class="chart1">
+            <div class="chart-container">
+                <h2>Movie Genre Distribution</h2>
+                {{ chart1|safe }}
+            </div>
         </div>
-    </div>
-    <div class="chart1-description chart-description">
-        <p>Top 10 movies highlight the massive popularity of superhero films, led by Avengers: Endgame, while diverse genres like thrillers and animated features also captivate audiences through high vote counts.</p>
-    </div>
-
-    <div class="chart4">
-        <div class="chart-container">
-            <h2>Top 10 Most Prolific Movie Directors<br>(By Vote Count of their movie)</h2>
-            {{ chart2|safe }}
+        <div class="chart1-description chart-description">
+            <p>Genre stuff</p>
         </div>
-    </div>
 
-    <div class="chart2">
-        <div class="chart-container">
-            <h2>Genre Distribution</h2>
-            {{ chart3|safe }}
+        <div class="chart4">
+            <div class="chart-container">
+                <h2>Network graph for potrayal of relationship between Directors and Actors</h2>
+                {{ chart2|safe }}
+            </div>
         </div>
-    </div>
 
-    <div class="chart4-description">
-        <p>Top directors like the Russo Brothers and Steven Spielberg drive massive audience engagement, while Drama, Comedy, and Thriller dominate as the most popular genres, showcasing diverse viewer preferences.</p>
-    </div>
-
-    <div class="chart3">
-        <div class="chart-container">
-            <h2>Total Number of Movies Per Year</h2>
-            {{ chart4|safe }}
+        <div class="chart2">
+            <div class="chart-container">
+                <h2>Overview Keywords Word Cloud</h2>
+                {{ chart3|safe }}
+            </div>
         </div>
-    </div>
 
-    <div class="chart3-description">
-        <p>The total number of movies released each year shows steady growth, peaking in 2022 before experiencing a slight decline in 2023, reflecting evolving industry trends and production dynamics.</p>
-    </div>
+        <div class="chart4-description">
+            <p>Network stuff</p>
+        </div>
+
+        <div class="chart3">
+            <div class="chart-container">
+                <h2>Movie Rating and Popularity</h2>
+                {{ chart4|safe }}
+            </div>
+        </div>
+
+        <div class="chart3-description">
+            <p>Movie rating and popularity stuff</p>
+        </div>
 {% endblock %}
