--- a/Website/static/search_results.css
+++ b/Website/static/search_results.css
@@ -13,6 +13,39 @@
     text-decoration: none; /* Add underline during hover */
 }
 
+.popup-dialog {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.search-suggestions {
+    position: absolute;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 7px;
+    width: 100%;
+    max-height: 300px;
+    overflow-y: auto;
+    z-index: 1000;
+    display: none;
+    top: 50px;
+}
+
+.dropdown-state {
+    padding: 10px;
+    text-align: center;
+    font-weight: bold;
+    color: #007bff;
+}
+
 .dark-mode .searched a {
     color: white; /* Default font color in dark mode */
 }
