--- a/Website/templates/intermediate.html
+++ b/Website/templates/intermediate.html
@@ -9,10 +9,13 @@
 {% endblock %}
 
 {% block content %} 
-    <h1 class="page-title-not-moving">Explore Intermediate Cinema Analytics</h1>
+    <div class="intermediate-content content">
+        <h1 class="page-title-not-moving">Explore Intermediate Cinema Analytics</h1>
 
-    <!-- Container for Dash app -->
-    <div class="dash-container">
-        <iframe src="/dash/" width="100%" height="800px" style="border:none;"></iframe>
+        <!-- Container for Dash app -->
+        <div class="dash-container">
+            <iframe src="/dash/" width="100%" height="800px" style="border:none;"></iframe>
+        </div>
     </div>
+    
 {% endblock %}
