--- a/Website/static/search_results.css
+++ b/Website/static/search_results.css
@@ -1,3 +1,13 @@
+
+.searched {
+    flex: 1;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin: 10px;
+}
+
 .searched li {
     margin: 10px 0; /* Add some margin between list items */
 }
