--- a/Website/static/personalized.css
+++ b/Website/static/personalized.css
@@ -5,6 +5,17 @@
     flex-direction: column;
 }
 
+.personalized-delete {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    color: red;
+    cursor: pointer;
+}
+
 .personalized-title {
     font-size: 30px;
     font-weight: bold;
